dev/splitweb/templates/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: go-splitweb
  labels:
    app: splitweb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: splitweb
  template:
    metadata:
      labels:
        app: splitweb
    spec:
      containers:
        - name: splitweb
          image: alnav3/splitweb:5
          imagePullPolicy: Always
          command: ["/bin/server"]
          ports:
            - containerPort: 80
