dev/splitweb/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: splitweb-ingress-external
  annotations:
    kubernetes.io/ingress.class: "nginx-external"
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: split.alnav.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: splitweb-service
            port:
              number: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: splitweb-ingress-internal
  annotations:
    kubernetes.io/ingress.class: "nginx-internal"
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: split.home
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: splitweb-service
            port:
              number: 8080
